[project]
name = "support-triage-env"
version = "1.0.0"
description = "A Support Triage AI Environment for OpenEnv"
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "requests",
    "openai"
]
requires-python = ">=3.10"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"